# travel-planner-crewai

./: docker-compose.yml  render.yaml
Front-End-Proyecto-Chatbot-de-Viajes/: COMANDOS.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  cloudbuild.yaml  service.yaml
Front-End-Proyecto-Chatbot-de-Viajes/.devcontainer/: devcontainer.json
Front-End-Proyecto-Chatbot-de-Viajes/src/: .env  app.py
travel_crew_backend/: COMANDOS.md  Dockerfile  README.md  itinerary.md  pyproject.toml  requirements.txt
travel_crew_backend/src/travel_crew_backend/: crew.py  main.py
travel_crew_backend/src/travel_crew_backend/config/: agents.yaml  tasks.yaml
