[project]
name = "travel_crew_backend"
version = "0.1.0"
description = "travel_crew_backend using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
travel_crew_backend = "travel_crew_backend.main:run"
run_crew = "travel_crew_backend.main:run"
train = "travel_crew_backend.main:train"
replay = "travel_crew_backend.main:replay"
test = "travel_crew_backend.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
